# gradingfactors-api

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  fly.toml  gradingfactors-api-project-brief-v2.md  gradingfactors-api-project-brief.md  pyproject.toml
api/: db.py  dependencies.py  main.py
api/models/: changelog.py  grain.py  register.py
api/routers/: changelog.py  grains.py  register.py
data/schema/: grain_record.json
data/seed/grains/: BARLEY_GP_CE.json  BARLEY_GP_CW.json  CANOLA.json  CORN_CE.json  CORN_CW.json  CPSR.json  CWAD.json  CWRS.json  SOYBEANS.json
docs/: field-reference.md
scraper/: __main__.py  diff.py  fetch.py  import_diff.py  parse.py  report.py
scripts/: create_tables.sql  enable_rls.sql  seed_db.py
tests/: conftest.py  test_api.py  test_parser.py
tests/fixtures/: barley_gp_ce_page.html  canola_page.html  corn_cw_page.html  cpsr_page.html  cwad_page.html  cwrs_page.html  soybeans_page.html
