[project]
name = "gradingfactors-api"
version = "0.1.0"
description = "Public reference data API for CGC grain grading factors"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "supabase>=2.4.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.1.0",
    "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "scraper*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pytest.ini_options]
pythonpath = ["."]